Archive2/9b/d382f9467125f8/output
main.cpp:4:11: error: 'f' was not declared in this scope
 int b = f();
           ^
